version/0.11/_sources/_autosummary/ansys.api.pyensight.ens_part_profile.ENS_PART_PROFILE.rst.txt
ENS\_PART\_PROFILE
==================

.. currentmodule:: ansys.api.pyensight.ens_part_profile

.. autoclass:: ENS_PART_PROFILE

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      ENS_PART_PROFILE.addchild
      
      
      ENS_PART_PROFILE.attrgroupinfo
      
      
      ENS_PART_PROFILE.attrinfo
      
      
      ENS_PART_PROFILE.attrissensitive
      
      
      ENS_PART_PROFILE.attrtree
      
      
      ENS_PART_PROFILE.cmdlang_rec_info
      
      
      ENS_PART_PROFILE.createpart
      
      
      ENS_PART_PROFILE.destroy
      
      
      ENS_PART_PROFILE.get_values
      
      
      ENS_PART_PROFILE.getattr
      
      
      ENS_PART_PROFILE.getattrs
      
      
      ENS_PART_PROFILE.getmetatag
      
      
      ENS_PART_PROFILE.hasmetatag
      
      
      ENS_PART_PROFILE.highlight_part
      
      
      ENS_PART_PROFILE.realtimemode
      
      
      ENS_PART_PROFILE.removechild
      
      
      ENS_PART_PROFILE.setattr
      
      
      ENS_PART_PROFILE.setattr_begin
      
      
      ENS_PART_PROFILE.setattr_end
      
      
      ENS_PART_PROFILE.setattr_status
      
      
      ENS_PART_PROFILE.setattrs
      
      
      ENS_PART_PROFILE.setmetatag
      
      
      ENS_PART_PROFILE.simba_get_values
      
      
      ENS_PART_PROFILE.simba_tracepaths
      
      
      ENS_PART_PROFILE.tracepaths
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ENS_PART_PROFILE.ACTIVE
      ENS_PART_PROFILE.ADJCOORDSCALEFACTOR
      ENS_PART_PROFILE.ADJCOORDTRANSVEC
      ENS_PART_PROFILE.ADJCOORDVARSCALEFACTOR
      ENS_PART_PROFILE.ADJCOORDXVARIABLE
      ENS_PART_PROFILE.ADJCOORDYVARIABLE
      ENS_PART_PROFILE.ADJCOORDZVARIABLE
      ENS_PART_PROFILE.ALPHABY
      ENS_PART_PROFILE.ALPHABYPALETTE
      ENS_PART_PROFILE.BOUNDINGREP
      ENS_PART_PROFILE.CASENUMBER
      ENS_PART_PROFILE.CHILDREN
      ENS_PART_PROFILE.CLIP
      ENS_PART_PROFILE.COLORBYPALETTE
      ENS_PART_PROFILE.COLORBYRGB
      ENS_PART_PROFILE.COMPONENT
      ENS_PART_PROFILE.CULLELEMENTS
      ENS_PART_PROFILE.DESCRIPTION
      ENS_PART_PROFILE.DISPLACEBY
      ENS_PART_PROFILE.DISPLACEFACTOR
      ENS_PART_PROFILE.DOUBLESIDED
      ENS_PART_PROFILE.DTA_BLOCK
      ENS_PART_PROFILE.EDIT_TARGET
      ENS_PART_PROFILE.ELTBLANKING
      ENS_PART_PROFILE.ELTDEFINEDBY
      ENS_PART_PROFILE.ELTFEATUREANGLE
      ENS_PART_PROFILE.ELTFILTER1ACTIVE
      ENS_PART_PROFILE.ELTFILTER1TESTOP
      ENS_PART_PROFILE.ELTFILTER1TESTVALUE
      ENS_PART_PROFILE.ELTFILTER1TESTVARCOMP
      ENS_PART_PROFILE.ELTFILTER1TESTVARIABLE
      ENS_PART_PROFILE.ELTFILTER1VARCOMP
      ENS_PART_PROFILE.ELTFILTER1VARIABLE
      ENS_PART_PROFILE.ELTFILTER2ACTIVE
      ENS_PART_PROFILE.ELTFILTER2LOGICALOP
      ENS_PART_PROFILE.ELTFILTER2TESTOP
      ENS_PART_PROFILE.ELTFILTER2TESTVALUE
      ENS_PART_PROFILE.ELTFILTER2TESTVARCOMP
      ENS_PART_PROFILE.ELTFILTER2TESTVARIABLE
      ENS_PART_PROFILE.ELTFILTER2VARCOMP
      ENS_PART_PROFILE.ELTFILTER2VARIABLE
      ENS_PART_PROFILE.ELTFILTER3ACTIVE
      ENS_PART_PROFILE.ELTFILTER3LOGICALOP
      ENS_PART_PROFILE.ELTFILTER3TESTOP
      ENS_PART_PROFILE.ELTFILTER3TESTVALUE
      ENS_PART_PROFILE.ELTFILTER3TESTVARCOMP
      ENS_PART_PROFILE.ELTFILTER3TESTVARIABLE
      ENS_PART_PROFILE.ELTFILTER3VARCOMP
      ENS_PART_PROFILE.ELTFILTER3VARIABLE
      ENS_PART_PROFILE.ELTFILTER4ACTIVE
      ENS_PART_PROFILE.ELTFILTER4LOGICALOP
      ENS_PART_PROFILE.ELTFILTER4TESTOP
      ENS_PART_PROFILE.ELTFILTER4TESTVALUE
      ENS_PART_PROFILE.ELTFILTER4TESTVARCOMP
      ENS_PART_PROFILE.ELTFILTER4TESTVARIABLE
      ENS_PART_PROFILE.ELTFILTER4VARCOMP
      ENS_PART_PROFILE.ELTFILTER4VARIABLE
      ENS_PART_PROFILE.ELTFILTER5ACTIVE
      ENS_PART_PROFILE.ELTFILTER5LOGICALOP
      ENS_PART_PROFILE.ELTFILTER5TESTOP
      ENS_PART_PROFILE.ELTFILTER5TESTVALUE
      ENS_PART_PROFILE.ELTFILTER5TESTVARCOMP
      ENS_PART_PROFILE.ELTFILTER5TESTVARIABLE
      ENS_PART_PROFILE.ELTFILTER5VARCOMP
      ENS_PART_PROFILE.ELTFILTER5VARIABLE
      ENS_PART_PROFILE.ELTFILTER6ACTIVE
      ENS_PART_PROFILE.ELTFILTER6LOGICALOP
      ENS_PART_PROFILE.ELTFILTER6TESTOP
      ENS_PART_PROFILE.ELTFILTER6TESTVALUE
      ENS_PART_PROFILE.ELTFILTER6TESTVARCOMP
      ENS_PART_PROFILE.ELTFILTER6TESTVARIABLE
      ENS_PART_PROFILE.ELTFILTER6VARCOMP
      ENS_PART_PROFILE.ELTFILTER6VARIABLE
      ENS_PART_PROFILE.ELTREPPOINTSNORMALS
      ENS_PART_PROFILE.ELTREPRESENTATION
      ENS_PART_PROFILE.ELTSHRINKFACTOR
      ENS_PART_PROFILE.ENS_DETAILS
      ENS_PART_PROFILE.ENS_KIND
      ENS_PART_PROFILE.ENS_MATERIAL
      ENS_PART_PROFILE.ENS_PARENT_PART
      ENS_PART_PROFILE.ENS_PLIST_KEY_SEL_0
      ENS_PART_PROFILE.ENS_PLIST_KEY_SEL_1
      ENS_PART_PROFILE.ENS_PLIST_KEY_SEL_2
      ENS_PART_PROFILE.ENS_PLIST_KEY_SEL_3
      ENS_PART_PROFILE.ENS_PLIST_KEY_SEL_4
      ENS_PART_PROFILE.ENS_PLIST_KEY_SEL_5
      ENS_PART_PROFILE.ENS_PLIST_KEY_SEL_6
      ENS_PART_PROFILE.ENS_PLIST_KEY_SEL_7
      ENS_PART_PROFILE.ENS_PLIST_KEY_SEL_8
      ENS_PART_PROFILE.ENS_PLIST_KEY_SEL_9
      ENS_PART_PROFILE.ENS_SYMMETRY_AXIS
      ENS_PART_PROFILE.ENS_SYMMETRY_COUNT
      ENS_PART_PROFILE.ENS_TURBO_STAGE
      ENS_PART_PROFILE.ENS_TURBO_VDIM
      ENS_PART_PROFILE.ENS_TURBO_VIEW
      ENS_PART_PROFILE.ENS_UNITS_LABEL
      ENS_PART_PROFILE.ENTITYLABELELT
      ENS_PART_PROFILE.ENTITYLABELNODE
      ENS_PART_PROFILE.FILLPATTERN
      ENS_PART_PROFILE.FLUENTTEXTUREAXIS
      ENS_PART_PROFILE.FLUENTTEXTUREROTANGLE
      ENS_PART_PROFILE.FLUENTTEXTURESCALE
      ENS_PART_PROFILE.HANDLES_ENABLED
      ENS_PART_PROFILE.HAS0DELEMENTS
      ENS_PART_PROFILE.HAS1DELEMENTS
      ENS_PART_PROFILE.HAS2DELEMENTS
      ENS_PART_PROFILE.HAS3DELEMENTS
      ENS_PART_PROFILE.HIDDENLINE
      ENS_PART_PROFILE.HIDDENSURFACE
      ENS_PART_PROFILE.IJKAXIS
      ENS_PART_PROFILE.IJKAXISSCALE
      ENS_PART_PROFILE.INPLANE1
      ENS_PART_PROFILE.INPLANE2
      ENS_PART_PROFILE.INPLANE3
      ENS_PART_PROFILE.ISGROUP
      ENS_PART_PROFILE.LIGHTAMBIENT
      ENS_PART_PROFILE.LIGHTDIFFUSE
      ENS_PART_PROFILE.LIGHTEMISSIVE
      ENS_PART_PROFILE.LIGHTREFRACTION
      ENS_PART_PROFILE.LIGHTSPECULARINTENSITY
      ENS_PART_PROFILE.LIGHTSPECULARREFLECTION
      ENS_PART_PROFILE.LIGHTSPECULARSHINE
      ENS_PART_PROFILE.LIGHTSPECULARTINT
      ENS_PART_PROFILE.LINESTYLE
      ENS_PART_PROFILE.LINEWIDTH
      ENS_PART_PROFILE.LPARTPARENT
      ENS_PART_PROFILE.MATERIALBASETYPE
      ENS_PART_PROFILE.MATERIALDESCRIPTION
      ENS_PART_PROFILE.MESHTYPE
      ENS_PART_PROFILE.METADATA
      ENS_PART_PROFILE.MIRRORORIGINAL
      ENS_PART_PROFILE.NODEDETAIL
      ENS_PART_PROFILE.NODEORIENTATIONANGLE
      ENS_PART_PROFILE.NODEORIENTATIONAXIS
      ENS_PART_PROFILE.NODERANGESTEPI
      ENS_PART_PROFILE.NODERANGESTEPJ
      ENS_PART_PROFILE.NODERANGESTEPK
      ENS_PART_PROFILE.NODESCALE
      ENS_PART_PROFILE.NODESIZEBY
      ENS_PART_PROFILE.NODETYPE
      ENS_PART_PROFILE.NODEVARIABLE
      ENS_PART_PROFILE.OFFSET
      ENS_PART_PROFILE.OPAQUENESS
      ENS_PART_PROFILE.PARENT
      ENS_PART_PROFILE.PARTNUMBER
      ENS_PART_PROFILE.PARTNUMELE
      ENS_PART_PROFILE.PARTNUMELECLIENT
      ENS_PART_PROFILE.PARTTYPE
      ENS_PART_PROFILE.PARTTYPEENUM
      ENS_PART_PROFILE.PATHNAME
      ENS_PART_PROFILE.PERIODICSECTIONS
      ENS_PART_PROFILE.PREDEFINEDMATERIAL
      ENS_PART_PROFILE.PROJECT_MASK
      ENS_PART_PROFILE.REDUCEPOLYGONS
      ENS_PART_PROFILE.REDUCEPOLYGONSFACTOR
      ENS_PART_PROFILE.REFFRAME
      ENS_PART_PROFILE.RENDERINGREFLECTIONID
      ENS_PART_PROFILE.REVERSENORMAL
      ENS_PART_PROFILE.SCALEFACTOR
      ENS_PART_PROFILE.SELECTED
      ENS_PART_PROFILE.SHADING
      ENS_PART_PROFILE.SHOWSFT
      ENS_PART_PROFILE.SOURCES
      ENS_PART_PROFILE.SPECIFYSYMMETRYORIGIN
      ENS_PART_PROFILE.SYMMETRYANGLE
      ENS_PART_PROFILE.SYMMETRYAXIS
      ENS_PART_PROFILE.SYMMETRYDELTA
      ENS_PART_PROFILE.SYMMETRYMIRRORX
      ENS_PART_PROFILE.SYMMETRYMIRRORXY
      ENS_PART_PROFILE.SYMMETRYMIRRORXYZ
      ENS_PART_PROFILE.SYMMETRYMIRRORXZ
      ENS_PART_PROFILE.SYMMETRYMIRRORY
      ENS_PART_PROFILE.SYMMETRYMIRRORYZ
      ENS_PART_PROFILE.SYMMETRYMIRRORZ
      ENS_PART_PROFILE.SYMMETRYORIGIN
      ENS_PART_PROFILE.SYMMETRYRINSTANCES
      ENS_PART_PROFILE.SYMMETRYTYPE
      ENS_PART_PROFILE.TEXTURECOORDTYPE
      ENS_PART_PROFILE.TEXTUREINTERPOLATION
      ENS_PART_PROFILE.TEXTUREMODE
      ENS_PART_PROFILE.TEXTUREOBJECT
      ENS_PART_PROFILE.TEXTUREORIGIN
      ENS_PART_PROFILE.TEXTUREORIGINNODEID
      ENS_PART_PROFILE.TEXTUREORIGINUSE
      ENS_PART_PROFILE.TEXTUREREPEATMODE
      ENS_PART_PROFILE.TEXTURESORIGINNODEID
      ENS_PART_PROFILE.TEXTURESVARIABLE
      ENS_PART_PROFILE.TEXTURESVECTOR
      ENS_PART_PROFILE.TEXTURETORIGINNODEID
      ENS_PART_PROFILE.TEXTURETVARIABLE
      ENS_PART_PROFILE.TEXTURETVECTOR
      ENS_PART_PROFILE.UUID
      ENS_PART_PROFILE.VARIABLE
      ENS_PART_PROFILE.VDBMESHADAPTIVITY
      ENS_PART_PROFILE.VDBMESHOFFSET
      ENS_PART_PROFILE.VDBNARROWBANDSIZE
      ENS_PART_PROFILE.VDBVOXELSIZERATIO
      ENS_PART_PROFILE.VIEWPORTVIS
      ENS_PART_PROFILE.VISIBILITYELT
      ENS_PART_PROFILE.VISIBILITYLINE
      ENS_PART_PROFILE.VISIBILITYNODE
      ENS_PART_PROFILE.VISIBLE
      ENS_PART_PROFILE.VOLUMEQUALITY
      ENS_PART_PROFILE.VOLUMERENDERINGTYPE
      ENS_PART_PROFILE.__OBJID__
      ENS_PART_PROFILE.objid
   
   